<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:layout_margin="16dp">

        <!-- Back Button -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/back_button"
                android:padding="8dp"
                android:src="@drawable/ic_back_arrow"
                tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/xeralco"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/app_name_form"
                android:textColor="#333333"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:padding="16dp">

            <TableRow>
                <TextView
                    android:id="@+id/name_label"
                    android:text="@string/name_label"
                    android:textStyle="bold"
                    android:textColor="#222222"/>

                <EditText
                    android:autofillHints="name"
                    android:hint="@string/hint_enter_name"
                    android:inputType="textPersonName"
                    android:labelFor="@id/name_label"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/dob_label"
                    android:text="@string/dob_label"
                    android:textStyle="bold"
                    android:textColor="#222222"/>

                <EditText
                    android:id="@+id/dob_input"
                    android:autofillHints="birthDate"
                    android:hint="@string/dob_hint"
                    android:inputType="date"
                    android:labelFor="@id/dob_label"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/address_label"
                    android:text="@string/address_label"
                    android:textStyle="bold"
                    android:textColor="#222222"/>

                <EditText
                    android:autofillHints="postalAddress"
                    android:hint="@string/address_hint"
                    android:inputType="textPostalAddress"
                    android:labelFor="@id/address_label"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/contact_number_label"
                    android:text="@string/contact_number_label"
                    android:textStyle="bold"
                    android:textColor="#222222"/>

                <EditText
                    android:autofillHints="phone"
                    android:hint="@string/contact_number_hint"
                    android:inputType="phone"
                    android:labelFor="@id/contact_number_label"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/email_label"
                    android:text="@string/email_label"
                    android:textStyle="bold"
                    android:textColor="#333333"/>

                <EditText
                    android:autofillHints="emailAddress"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:labelFor="@id/email_label"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/age_label"
                    android:text="@string/age_label"
                    android:textStyle="bold"
                    android:textColor="#222222"/>

                <EditText
                    android:autofillHints="age"
                    android:hint="@string/age_hint"
                    android:inputType="number"
                    android:labelFor="@id/age_label"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/gender_label"
                    android:text="@string/gender_label"
                    android:textStyle="bold"/>

                <EditText
                    android:autofillHints="gender"
                    android:hint="@string/gender_hint"
                    android:labelFor="@id/gender_label"
                    android:textColorHint="#757575"
                    tools:ignore="TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/religion_label"
                    android:text="@string/religion_label"
                    android:textStyle="bold"
                    android:textColor="#222222"/>

                <EditText
                    android:autofillHints=""
                    android:hint="@string/religion_hint"
                    android:inputType="text"
                    android:labelFor="@id/religion_label"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/occupation_label"
                    android:text="@string/occupation_label"
                    android:textStyle="bold"/>

                <EditText
                    android:autofillHints="jobTitle"
                    android:hint="@string/occupation_hint"
                    android:inputType="text"
                    android:labelFor="@id/occupation_label"
                    android:textColorHint="#757575"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/position_label"
                    android:autofillHints=""
                    android:text="@string/position_label"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/position_input"
                    android:hint="@string/position_hint"
                    android:inputType="text"
                    android:labelFor="@id/position_label"
                    android:textColorHint="#757575"
                    tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/submit_button"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>
