<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"> <!-- Add this line -->

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/xeralco"
        android:contentDescription="@string/app_logo_content_description"/>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/btn_create"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/create_button_text"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_view"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/view_button_text"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_about"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/about_button_text"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>

    <!-- Slogan -->
    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:text="@string/slogan_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="#000000"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="6"
        android:padding="12dp"
        android:gravity="center"/>



    <!-- Footer -->
    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/footer_text"
        android:textSize="14sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif"
        android:textColor="#505050"/>

</RelativeLayout>
