<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Logo -->
        <View
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/xeralco" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_s_list"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <!-- Horizontal Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginBottom="16dp"/>

        <!-- Employee Grid -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_marginBottom="16dp"
            android:columnOrderPreserved="false">

            <!-- Employee Card 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/LIST01"
                        android:scaleType="centerCrop"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/manager"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name07"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Employee Card 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cener"
                    android:importantForAccessibility="no"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/name06"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name05"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Employee Card 3 -->
            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/name04"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name03"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Employee Card 4 -->
            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/main"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/name02"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </LinearLayout>
</ScrollView>
